@@ -16,7 +16,7 @@ SET (CPACK_PACKAGE_CONTACT "Martin Blom <martin@blom.org>")
 SET (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
 SET (CPACK_PACKAGE_VERSION_MAJOR "0")
 SET (CPACK_PACKAGE_VERSION_MINOR "9")
-SET (CPACK_PACKAGE_VERSION_PATCH "20091122")
+SET (CPACK_PACKAGE_VERSION_PATCH "20100115")
 SET (CPACK_PACKAGE_INSTALL_DIRECTORY "ESXX")
 SET (CPACK_IGNORE_FILES "/etc")
 
